# SwervePuppy-2.0

./: .gitignore  SimulinkSmartDashboard.cpp  SimulinkSmartDashboard.h  SwerveModSimulation.slxc  build.gradle  code_gen_model.slxc  shop_tag_measurements.m  shuffleboard_Drive_Debugging.json  shuffleboard_Spline_Path_Following.json
.wpilib/: wpilib_preferences.json
Obsidian/: 360 3D LIDAR.md  AI controlled Tele-op.md  Autonomous Path Planning In Tele-op.md  Autonomous Path Planning In Teleop.md  Design Test Platform.md  Determine Color Of Extended Objects.md  Determine Team Of Other Robot.md  Extended Object Tracking.md  Follow A Path Of Poses.md  Get Ready For 2024 Game.md  Motion Planning.md  PR Contact.md  Path Finding.md  Path Planning.md  Pneumatics Control.md  RIO Refurbish.md  TX2 or Orin Nano.md  Test Platform.md  Track Other Robots.md  UE4 Simulated 3D Environment.md
Obsidian/.obsidian/: graph.json  workspace.json
Simulink/: SwerveModSimulation.slx  SwerveModSimulation.slxc  SwervePuppy2.slx
Simulink/Part Models/: Double Gear, 20DP, 25T, 50T.stp  Drive_Colum_mk4i.stp  Drive_motor_Shaft_mk4i.stp  Intermediate_Wheel_Rotor_mk4i.stp  Turn_Colum_mk4i.stp  Turn_motor_Shaft_mk4i.stp
shuffleboard_layouts/: shuffleboard_Vision_Kalman_Spline.json
simulink/: Code_Gen_Model_Config.mat
simulink/Apps/: app1.mlapp
simulink/Data/: CONST.m  Code_Gen_Model_Config.mat  Code_Gen_Model_data.m  Constants.sldd  EXTERN.m  LoadBinaryPNG.m  NEO-MotorCurve-12V.csv  Simulation_Joystick_Data.mat
simulink/Data/Maps/: TestMap1.xcf
simulink/Models/: Code_Gen_Model.slx  Simulation_Model.slx  Simulation_Model.slx.original  Simulation_Model_BACKUP_1373.slx  Simulation_Model_REMOTE_1373.slx  Swerve_Drive_Example_Model.slx  Swerve_Module.slx
simulink/Models/Catmull_Rom/: Autonomously_Navigate_Poses.slx  Bandwidth_Check_Between_Two_Points.slx  Find_Curvature.slx  Find_Point_Coefficients.slx  Make_Knots.slx
simulink/Reusable_Models/Code_Gen_Libraries/: Autonomous_lib.slx  Controls_Components_lib.slx  Disabled_lib.slx  Teleop_lib.slx  Test_lib.slx
simulink/Reusable_Models/Code_Gen_Referenced_Subsystems/: Extended_Kalman_Filter_sub.slx  Joystick_Input_To_Swerve_Drive_sub.slx  Kalman_Filter_sub.slx  Odometry_sub.slx  RoboRio_Controls_sub.slx  Spline_Path_Following_sub.slx  Steer_Module_Offset_Adjustments_sub.slx  Swerve_Drive_Module_sub.slx  Swerve_Drive_sub.slx
simulink/Reusable_Models/Simulation/: Simulation_lib.slx
simulink/Reusable_Models/Simulink Xbox Controller (XInput API)/: Model_XInput_wFeedback.slx  Model_persistent_image_allocation.m
simulink/Simscape/: Swerve_Module_Simulation.slx
simulink/Top_Level_Models/: Code_Gen_Model.slx  Simulation_Model.slx
simulink/Unit_Tests/: Catwell_Rom.slx  Catwell_Rom.slx.original  Joystick_input_test_data.mat  Module_Testing.slx  Path_Creation.slx  Signed_Rate_Limiter.slx  Swerve_Drive_Example_Model.slx  Swerve_Puppy.slx  Test_Functions.m  Unreal_Integration_Test.slx
simulink/Unit_Tests/Catmull-Rom/: Catmull_Rom.slx  Catmull_Rom_Path_Test_Cases.mat  Catmull_Rom_Plotting.m  ChainSampling.slx  ChainSampling_Plot.m  PreSample_Print.m  PreSample_Test.slx  Sampling_Test.slx
simulink/Unit_Tests/Catwell-Rom/: Catwell_Rom.slx  Catwell_Rom_Path_Test_Cases.mat  Catwell_Rom_Plotting.m  ChainSampling.slx  Sampling_Test.slx  Sampling_Test_Plotting_Script.m
simulink/Unit_Tests/Motion_Planning_Testing/: Motion_Planning.slx  Motion_Planning_Plotting.m
simulink/Unit_Tests/Odometry/: kalman_filter_design.slx  kalman_test1.slx  odometry_data.m  odometry_test.slx
simulink/Utilities/: Build_Extern.m  Build_Intern.m  Make_Vars_Extern.m  Plot_XY.m  Plot_XY_odometry.m  Test_Script.m  generate_controller_code.m  load_workspace.m  write.m
simulink/libraries/: Angle_Wrap_lib.slx  Control_Model_lib.slx  Math.slx  Pathfinding_lib.slx  Pathfinding_lib.slx.original  Rotation2D.slx  Simulation_lib.slx  Swerve_Drive_lib.slx  Swerve_ModuleControl_Lib.slx  Swerve_Modules_Controls_Lib.slx
simulink/libraries/Code_Gen/: Autonomous_lib.slx  Code_Gen_lib.slx  Control_sub.slx  Disabled_lib.slx  Teleop_lib.slx  Test_lib.slx
simulink/libraries/Simulation/: Simulation_lib.slx
simulink/libraries/Simulink Xbox Controller (XInput API)/: Model_XInput.slx  Model_XInput_Masked.slx
slprj/accel/SwerveModSimulation/: SwerveModSimulation_SolverChangeInfo.mat  SwerveModSimulation_instrumentation_settings.mat  SwerveModSimulation_top_vm.bc  amsi_serial.mat
src/main/Catwell_Rom_ert_rtw/: CMakeLists.txt  Catwell_Rom.c  Catwell_Rom.h  Catwell_Rom_data.c  Catwell_Rom_private.h  Catwell_Rom_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/main/Catwell_Rom_ert_rtw/tmwinternal/: simulink_cache.xml  tr
src/main/Code_Gen_Model_ert_rtw/: CMakeLists.txt  Code_Gen_Model.bat  Code_Gen_Model.c  Code_Gen_Model.h  Code_Gen_Model.mk  Code_Gen_Model.rsp  Code_Gen_Model_comp.rsp  Code_Gen_Model_data.c  Code_Gen_Model_private.h  Code_Gen_Model_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  setup_mingw.bat
src/main/Code_Gen_Model_ert_rtw/export/: Code_Gen_Model.cmake  Code_Gen_ModelTargets-release.cmake  Code_Gen_ModelTargets.cmake
src/main/Code_Gen_Model_ert_rtw/tmwinternal/: simulink_cache.xml  tr
src/main/code_gen_model_ert_rtw/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  code_gen_model.c  code_gen_model.cpp  code_gen_model.h  code_gen_model_data.c  code_gen_model_data.cpp  code_gen_model_private.h  code_gen_model_types.h  codedescriptor.dmr  compileInfo.mat  ert_main.c  ert_main.cpp  rtGetInf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.c  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/main/code_gen_model_ert_rtw/tmwinternal/: simulink_cache.xml  tr
(+341 files in other folders)
